# yspeech

./: .gitignore  README.md  example.sh  yspeech.cabal
app/: Main.hs
src/YSpeech/: Config.hs  Types.hs
src/YSpeech/Audio/: Split.hs
src/YSpeech/Result/: Format.hs  Merge.hs
src/YSpeech/SpeechKit/: Api.hs  Types.hs
